<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.thien.a123go.activity.FoodDetailActivity"
    tools:showIn="@layout/activity_food_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <ImageView
            android:id="@+id/foodImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginRight="5dp"
            android:adjustViewBounds="false"
            android:contentDescription="icon"
            android:layout_gravity="center"
            android:src="@android:drawable/ic_menu_info_details" />

        <TextView
            android:id="@+id/foodName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="serif"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/foodPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/foodDiscount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/foodDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/foodRatingCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RatingBar
            android:id="@+id/foodRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="0.5"
            android:isIndicator="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_back" />

            <Button
                android:id="@+id/btnRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_rating" />

            <Button
                android:id="@+id/btnComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_comment" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:text="@string/comment_title"/>

        <ListView
            style="@style/Widget.AppCompat.ListView"
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:headerDividersEnabled="false" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
